--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1 {
     text-align: center;
     font-family: oregonFont2, serif;
     font-size: 50px;
-    color: navajowhite;
+    color: #d5f3bc;
     font-weight: 500;
     margin-bottom: 0.5rem;
 }
@@ -37,6 +37,7 @@ body {
     border-color: rgba(235, 244, 160, 0.3);
     border-width: 1px;
 }
+
 .letter-box {
     border: 2px solid gray;
     border-radius: 3px;
@@ -95,7 +96,7 @@ body {
     font-family: oregonFontSmall, serif;
 }
 
-.modal2 {
+.popupwindow {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -111,23 +112,26 @@ body {
 /*POPUP WINDOWS*/
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #bfffbf;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     animation-name: fadein;
-    animation-duration: 0.4s
+    animation-duration: 0.8s;
+    animation-timing-function: ease-out;
+
+    justify-content: center;
 }
 @keyframes fadein { /*animation for poopup windiw*/
-    from {top: -10px; opacity: 0}
-    to {top: 0; opacity: 1}
+    from {width: 30%; opacity: 0}
+    to {width: 80%; opacity: 1}
 }
 
 /* The Close Button */
 .close {
     color: #aaa;
-    float: right;
+    //float: right;
     font-size: 28px;
     font-weight: bold;
 }
@@ -135,8 +139,12 @@ body {
 .close:hover,
 .close:focus {
     color: black;
-    text-decoration: none;
+    text-decoration: underline;
     cursor: pointer;
+}
+#resultsbutton {
+
+
 }
 /*/POPUP WINDOWS*/
 
