--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
-h1{text-align: center;font-family: oregonFont2, serif;font-size: 50px;color: rgba(230, 255, 0, 0.81);font-weight: bold;margin-bottom: 0.5rem;}
-p{font-size: 33px;font-weight: bold;font-family: Verdana, Geneva, Tahoma, sans-serif;align-content: center;text-align: center;text-space: 100px;border-bottom: 1px solid rgba(42, 80, 42, 0.33);}
+h1 {
+    text-align: center;
+    font-family: oregonFont2, serif;
+    font-size: 50px;
+    color: rgba(230, 255, 0, 0.81);
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+p {
+    font-size: 33px;
+    font-weight: bold;
+    //font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: oregonFont2, serif;
+    align-content: center;
+    text-align: center;
+    text-space: 100px;
+
+    border-bottom: 1px solid rgba(42, 80, 42, 0.33);
+}
 img {
     scale: 0.6;
     height: 500px;
