--- a/style.css
+++ b/style.css
@@ -1,68 +1,76 @@
-h1 {
-    text-align: center;
-    font-family: oregonFont2, serif;
+h2 {
+    align-items: center;
+    /*font-family: oregonFont2, serif;
     font-size: 50px;
-    color: rgba(230, 255, 0, 0.81);
+    color: rgba(23, 58, 17, 0.81);
     font-weight: bold;
-    margin-bottom: 0.5rem;
+     */
+    scale: 0.2;
+    width:102%;
+    height: 6rem;
 }
 p {
-    font-size: 33px;
     font-weight: bold;
-    //font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-family: oregonFont2, serif;
+    font-family: oregonFont2, Verdana, serif;
     align-content: center;
     text-align: center;
-    text-space: 100px;
-
-    border-bottom: 1px solid rgba(42, 80, 42, 0.33);
 }
-img {
+#duckSteps {
     scale: 0.6;
     height: 500px;
-    filter: brightness(110%);
+    margin-left: 3rem;
+    margin-right: 3rem;
+    filter: brightness(130%);
 }
-body {
-    background-color: rgba(0, 112, 48, 0.9);
+@media screen and (max-width: 900px) {
+    #duckSteps{
+        display: none;
+    }
 }
+
+/*yellow #FFFF00
+green # #39B54A
+*/
 
 #game-board {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgba(100, 200, 130, 0.3);
-    border: 2px rgba(230, 255, 0, 0.81) solid;
+    /*background-color: rgba(72, 140, 63, 0.92);*/
+    background-color: rgba(57, 181, 74, 1);
+    /*border: 2px rgba(10, 23, 10, 0.51) solid;*/
 
-    padding: 5px;
-    margin-bottom: 50px;
+    padding: 15px;
+    margin-bottom: 40px;
+    border-radius: 0.8rem;
 
 }
 #threetop {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    //padding-top: 30px;
-        margin-bottom: -5rem;  /*KEYBOARD DISTANCE SIZE*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem;
+    margin-bottom: -2rem;  /*KEYBOARD DISTANCE SIZE*/
     border-style: solid none none none;
-    border-color: rgba(235, 244, 160, 0.3);
+    border-color: rgb(26, 44, 14);
     border-width: 1px;
 }
 
 .letter-box {
     border: 2px solid gray;
     border-radius: 3px;
-    background-color: rgba(220, 250, 225, 1);
+    background-color: rgba(230, 255, 235, 0.98);
     margin: 2px;
-    font-size: 2.3rem;
-    font-weight: bolder;
-    height: 3rem;
-    width: 3rem;
+    font-size: 2.2rem;
+    font-weight: bold;
+    height: 3.8rem;
+    width: 3.8rem;
     display: flex;
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
-    font-family: Playfair Display, Geneva, Tahoma, sans-serif;
+    font-family: Tahoma, Geneva, sans-serif;
 
 }
 @keyframes tileturngy{
@@ -131,9 +139,9 @@ body {
     align-items: center;
     justify-content: center;
 
-    background-color: rgba(32, 60, 45, 0.68);
-    padding: 1rem;
-    border-radius: 4rem;
+    /*background-color: rgba(88, 156, 99, 0.75);*/
+    /*padding: 1rem;*/
+    /*border-radius: 4rem;*/
 }
 #keyboard-cont div {
     display: flex;
@@ -146,11 +154,13 @@ body {
 .keyboard-button {
     font-size: 1rem;
     font-weight: 700;
-    padding: 0.6rem; /*general widt of key boxes*/
+    padding: 0.70rem; /*general widt of key boxes*/
     margin: 0 2px;
     cursor: pointer;
     text-transform: uppercase;
     font-family: oregonFontSmall, serif;
+    border-color: green;
+    border-block-style: solid
 }
 
 .popupwindow {
@@ -170,18 +180,17 @@ body {
 /*POPUP WINDOWS*/
 /* Modal Content/Box */
 .modal-content {
-    background-color: #bcffbc;
+    background-color: #c0efc0;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #253c25;
-    //width: 23%; /* Could be more or less, depending on screen size */
-    //height: 25%;
+    border: 2px solid #253c25;
     width: 300px; /* Could be more or less, depending on screen size */
-    height: 225px;
+    height: 280px;
     animation-name: fadein;
     animation-duration: 0.8s;
     animation-timing-function: ease-out;
     border-radius: 2px;
+
 
     display: flex;
     flex-direction: column;
@@ -194,36 +203,61 @@ body {
 }
 
 /* The Close Button */
-.close {
-    color: #afadad;
-    //float: right;
-    font-size: 15px;
-    font-weight: bold;
-    justify-content: flex-end;
-    align-self: flex-end;
-    font-family: oregonFont2, serif;
-}
+/*.close {*/
+/*    color: #afadad;*/
+/*    //float: right;*/
+/*    font-size: 15px;*/
+/*    font-weight: bold;*/
+/*    justify-content: flex-end;*/
+/*    align-self: flex-end;*/
+/*    font-family: oregonFont2, serif;*/
+/*}*/
 
-.close:hover,
-.close:focus {
-    color: #747773;
-    text-decoration: underline;
+/*.close:hover,*/
+/*.close:focus {*/
+/*    color: #747773;*/
+/*    text-decoration: underline;*/
+/*    cursor: pointer;*/
+/*}*/
+#resultsbutton {
+    height: 40px;
+    width: 7rem;
+    margin-top: 2rem;
+    font-family: oregonFont2, Geneva, Tahoma, sans-serif;
+    background-color: #dadacd;
+    transition-duration: 0.3s;
+    border-color: #39B54A;
+}
+#resultsbutton:hover {
+    background-color: #409c55; /* Green */
+    color: #dadacd;
     cursor: pointer;
 }
-#resultsbutton {
-    height: 70px;
-    font-family: Playfair Display, Geneva, Tahoma, sans-serif;
-    //background-color: aquamarine;
+#gameOverMessage{
+    font-size: 33px;
+    font-weight: bold;
+    font-family: oregonFont2, Verdana, serif;
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: rgba(51, 83, 46, 1);
 }
 #gameOverInfo {
     font-family: oregonFont2, Geneva, Tahoma, sans-serif;
-    font-size: 17px;
-    padding-bottom: 10px;
+    font-size: 19px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 #gameOverLink {
     font-family: oregonFont2, Geneva, Tahoma, sans-serif;
-    font-size: 15px;
-    padding-bottom: 20px;
+    font-size: 1.1rem;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    text-align: center;
+    width: 200px;
+    color: #1a4a2a;
+}
+#gameOverLink:hover{
+    color: #39B54A;
 }
 /*/POPUP WINDOWS*/
 
